--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Mi App de Hábitos</h1>
+
+        <!-- Lista de hábitos -->
         <div class="row">
-            <!-- Lista de hábitos -->
-            <div class="col-md-12" id="habitsListContainer">
+            <div class="col-12">
                 <h2>Mis Hábitos</h2>
                 <div id="habitsList">
                     <ul class="list-group">
@@ -36,11 +37,8 @@
                 </div>
             </div>
 
-
-            <!-- Historial de días 
-            
-            
-            <div class="col-md-6">
+            <!-- Historial de días
+            <div class="col-12 mt-4">
                 <table class="table">
                     <thead>
                         <tr>
@@ -62,37 +60,20 @@
                             <td><span class="badge badge-success">Sí</span></td>
                             <td><span class="badge badge-success">Sí</span></td>
                             <td><span class="badge badge-success">Sí</span></td>
-                        </tr>
-                        <tr>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-danger">No</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                        </tr>
-                        <tr>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-danger">No</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                            <td><span class="badge badge-success">Sí</span></td>
-                        </tr>
+                        </tr> -->
+                        <!-- Agrega más filas para los otros días -->
+                    </tbody>
+                </table>
+            </div>
 
-                -->
-            <!-- Agrega más filas para los otros días -->
-            </tbody>
-            </table>
-        </div>
-        <div class="col-md-6">
-            <a href="crear-habito.html" class="btn btn-primary float-right">Crear Nuevo Hábito</a>
-
+            <!-- Botón para crear nuevo hábito -->
+            <div class="col-12 mt-3">
+                <a href="crear-habito.html" class="btn btn-primary btn-block">Crear Nuevo Hábito</a>
+            </div>
         </div>
     </div>
-    </div>
+</body>
+
 
     <!-- Agrega el enlace a Bootstrap JS (opcional) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
