--- a/crear-habito.html
+++ b/crear-habito.html
@@ -52,7 +52,7 @@
             habits.push(habit);
             localStorage.setItem('habits', JSON.stringify(habits));
             // Redirección a index.html
-            window.location.href = '/index.html';
+            window.location.href = 'index.html';
         }
 
 
